--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
                 </ul>
             </div>
         </section>
+        <section class="page-home-overlay overlay">
+            <div class="overlay-container container">
+                
+            </div>
+        </section>
     </main>
 </body>
 </html>
