--- a/index.html
+++ b/index.html
@@ -47,6 +47,41 @@
                 
             </div>
         </section>
+        <section class="0.3s ease 0s-button button-home">
+            <div class="button-home-container container">
+                <button class="button-home-button">клікни мене</button>
+            </div>
+        </section>
+        <section class="page-home-cards cards-home">
+            <div class="cards-home-container container">
+                <ul class="cards-home-list">
+                    <li class="cards-home-item">
+                        <h2 class="cards-home-title">
+                            Lorem ipsum dolor sit amet.
+                        </h2>
+                        <p class="cards-home-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, aperiam.
+                        </p>
+                    </li>
+                    <li class="cards-home-item">
+                        <h2 class="cards-home-title">
+                            Lorem ipsum dolor sit amet.
+                        </h2>
+                        <p class="cards-home-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, aperiam.
+                        </p>
+                    </li>
+                    <li class="cards-home-item">
+                        <h2 class="cards-home-title">
+                            Lorem ipsum dolor sit amet.
+                        </h2>
+                        <p class="cards-home-text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, aperiam.
+                        </p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
